--- a/app/homepage.html
+++ b/app/homepage.html
@@ -286,7 +286,6 @@
 			<p>Электромонтажные работы в небольшой современном гараже частного дома, с кухней, комнатой отдыха и сан.узлом. Черновой монтаж производился не мной, мне лишь досталось "счастье" доделывать чистовой монтаж. Подрозетники яйцом или не в один уровень, провода коротыши торчащие из стен, потолка и подрозетников, облицовка в виде керамогранита, которая местами мешала нормальной установке розеток и выключателей.</p>
 		</div>
 
-		<!-- .sqicons__item>.sqicons__pic>img[src="/template/images/icons/.png"]+^.sqicons__text>h3.sqicons__item-title+p -->
 		<div class="flexbox sqicons-flexbox">
 			<div class="sqicons__item">
 				<div class="sqicons__pic"><img src="/template/images/icons/attemption.png" alt=""></div>
@@ -367,122 +366,126 @@
 		</ul>
 		<div class="rubrics__body">
 			<div class="tab tab-current" id="tab-news">
+				<h2 class="show-sm title">Новости</h2>
 				<div class="flexbox">
-					<div class="news">
+					<article class="news">
 						<div class="news__item">
 							<time class="date">2017-09-15</time>
 							<h3 class="news__title">Новые контроллеры WAGO с поддержкой Profibus DP Master</h3>
 							<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 						</div>
-					</div>
-					<div class="news">
+					</article>
+					<article class="news">
 						<div class="news__item">
 							<time class="date">2017-09-15</time>
 							<h3 class="news__title">Metra - система кабельных каналов и мини-каналов</h3>
 							<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 						</div>
-					</div>
-					<div class="news">
+					</article>
+					<article class="news">
 						<div class="news__item">
 							<time class="date">2017-09-15</time>
 							<h3 class="news__title">ABB оснастит первое «анти-круизное» судно из коллекции яхт сети Ritz Carlton </h3>
 							<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 						</div>
-					</div>
-					<div class="news">
+					</article>
+					<article class="news">
 						<div class="news__item">
 							<time class="date">2017-09-15</time>
 							<h3 class="news__title">Открытие продаж нового модуля IFM Modbus Interface - LV434000</h3>
 							<p><a href="#" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
 						</div>
-					</div>
+					</article>
 				</div>
 				<div class="more text-center rubrics__bottom">&lt; <a href="#" title="" class="rubrics__link">перейти в раздел</a> &gt;</div>
 			</div>
 			<div class="tab" id="tab-articles">
+				<h2 class="show-sm title">Статьи</h2>
 				<div class="flexbox">
-					<div class="article">
+					<article class="article">
 						<a href="#" title="" class="article__link">
 							<div class="article__pic"><img src="images/article-1.jpg" alt=""></div>
-							<p class="article__title">КАК ПОМЕНЯТЬ ПОДРОЗЕТНИК</p>
+							<h3 class="article__title">КАК ПОМЕНЯТЬ ПОДРОЗЕТНИК</h3>
 						</a>
-					</div>
-					<div class="article">
+					</article>
+					<article class="article">
 						<a href="#" title="" class="article__link">
 							<div class="article__pic"><img src="images/article-2.jpg" alt=""></div>
-							<p class="article__title">Как правильно штробить стену</p>
+							<h3 class="article__title">Как правильно штробить стену</h3>
 						</a>
-					</div>
-					<div class="article">
+					</article>
+					<article class="article">
 						<a href="#" title="" class="article__link">
 							<div class="article__pic"><img src="images/article-3.jpg" alt=""></div>
-							<p class="article__title">как наростить проводку</p>
+							<h3 class="article__title">как наростить проводку</h3>
 						</a>
-					</div>
-					<div class="article">
+					</article>
+					<article class="article">
 						<a href="#" title="" class="article__link">
 							<div class="article__pic"><img src="images/article-4.jpg" alt=""></div>
-							<p class="article__title">прокладка проводки по полу</p>
+							<h3 class="article__title">прокладка проводки по полу</h3>
 						</a>
-					</div>
+					</article>
 				</div>
 				<div class="more text-center rubrics__bottom">&lt; <a href="#" title="" class="rubrics__link">перейти в раздел</a> &gt;</div>
 			</div>
 			<div class="tab" id="tab-faq">
+				<h2 class="show-sm title">Вопрос? Ответ!</h2>
 				<div class="flexbox">
-					<div class="rubrics__faq">
+					<article class="rubrics__faq">
 						<div class="rubrics__faq-item">
 							<h3 class="rubrics__faq-title">Что лучше внутренняя или внешняя проводка?</h3>
 							<p><a href="#" title="">И тот и другой вид проводки имеет свои преимущества, однако в большинстве случаев выбирать не приходится. В многоэтажных домах из кирпича или ...</a></p>
 						</div>
-					</div>
-					<div class="rubrics__faq">
+					</article>
+					<article class="rubrics__faq">
 						<div class="rubrics__faq-item">
 							<h3 class="rubrics__faq-title">Какой провод лучше медный или алюминиевый?</h3>
 							<p><a href="#" title="">Так как алюминий весит намного меньше меди, его больше применяют при прокладке линий электропередач, что позволяет уменьшить ...</a></p>
 						</div>
-					</div>
-					<div class="rubrics__faq">
+					</article>
+					<article class="rubrics__faq">
 						<div class="rubrics__faq-item">
 							<h3 class="rubrics__faq-title">Можно ли соединять медь с алюминием?</h3>
 							<p><a href="#" title="">В квартирах домов старой постройки зачастую электропроводка выполнена из алюминиевых проводов, соединенных между собой методом скрутки ...</a></p>
 						</div>
-					</div>
-					<div class="rubrics__faq">
+					</article>
+					<articlee class="rubrics__faq">
 						<div class="rubrics__faq-item">
 							<h3 class="rubrics__faq-title">Крепление провода в штробе - как закрепляют провод и нужно ли это вообще?</h3>
 							<p><a href="#" title="">Как можно догадаться, речь идет о внутренней проводке, которая подразумевает скрытие электрических проводов в штробах с последующим их ...</a></p>
 						</div>
-					</div>
+					</article>
 				</div>
 				<div class="more text-center rubrics__bottom">&lt; <a href="#" title="" class="rubrics__link">перейти в раздел</a> &gt;</div>
 			</div>
 			<div class="tab" id="tab-reviews">
+				<h2 class="show-sm title">Отзывы</h2>
 				<div class="flexbox">
-					<div class="rubrics__reviews">
+					<article class="rubrics__reviews">
 						<div class="rubrics__reviews-item">
 							<h3 class="rubrics__reviews-title">Анна, Щелково</h3>
 							<p><a href="#" title="">Хочу поделиться отзывом о работе электрика Алексея: Огромное спасибо Александру за открытость, профессионализм, неравнодушие и комфорт в общении! Приехал быстро, сделал аккуратно, ...</a></p>
 						</div>
-					</div>
-					<div class="rubrics__reviews">
+					</article>
+					<article class="rubrics__reviews">
 						<div class="rubrics__reviews-item">
 							<h3 class="rubrics__reviews-title">Ирина, поселок Лесной</h3>
 							<p><a href="#" title="">Выражаю благодарность специалистам компании за электромонтажные работы в квартире. Все сделано очень профессионально, качественно, аккуратно, в оговоренные сроки и по приемлемой цене. ...</a></p>
 						</div>
-					</div>
-					<div class="rubrics__reviews">
+					</article>
+					<article class="rubrics__reviews">
 						<div class="rubrics__reviews-item">
 							<h3 class="rubrics__reviews-title">Владимир, Щелково</h3>
 							<p><a href="#" title="">Высокопрофессиональное, качественное, вежливое обслуживание!!! Спасибо Алексею! Ни к кому больше обращаться не будем! Просто удача найти таких специалистов! ...</a></p>
 						</div>
-					</div>
-					<div class="rubrics__reviews">
+					</article>
+					<article class="rubrics__reviews">
 						<div class="rubrics__reviews-item">
 							<h3 class="rubrics__reviews-title">Ирина, Фрязино</h3>
 							<p><a href="#" title="">Мы с мужем в воскресенье купили люстру, и нам очень хотелось ее повесить. Муж стал подключать ее и обломил провод в потолке, причем обломил под самый корешок. Очень расстроились, так как ...</a></p>
 						</div>
-					</div>
+					</article>
 				</div>
 				<div class="more text-center rubrics__bottom">&lt; <a href="#" title="" class="rubrics__link">перейти в раздел</a> &gt;</div>
 			</div>
@@ -665,9 +668,9 @@
 						<label for="writeus-name" class="visual-hidden">Ваше имя</label>
 						<input name="name" id="writeus-name" type="text" value="" class="form-control required" required placeholder="ваше имя *" aria-required="true" />
 						<label for="writeus-tel" class="visual-hidden">Телефон</label>
-						<input name="tel" type="tel" value="" class="form-control required" required placeholder="номер телефона *" aria-required="true" />
+						<input name="tel" id="writeus-tel" type="tel" value="" class="form-control required" required placeholder="номер телефона *" aria-required="true" />
 						<label for="writeus-email" class="visual-hidden">E-mail</label>
-						<input name="email" type="email" id="writeus-email" value="" class="form-control required email" required placeholder="ваш e-mail *" aria-required="true" />
+						<input name="writeus" type="email" id="writeus-email" value="" class="form-control required email" required placeholder="ваш e-mail *" aria-required="true" />
 					</div>
 					<label for="writeus-msg" class="visual-hidden">Текст вашего сообщения</label>
 					<textarea name="msg" id="writeus-msg" cols="30" rows="10" placeholder="текст вашего сообщения" class="form-control"></textarea>
