--- a/app/homepage.html
+++ b/app/homepage.html
@@ -39,10 +39,10 @@
 		<div class="flexbox">
 		<!-- =navbar -->
 		<nav id="navbar" class="header__nav">
-			<ul class="nav nav-tabs" role="tablist">
+			<ul class="nav nav-tabs mainnav" role="tablist">
 				<li><a class="nav-link" href="homepage.html" title="">Главная</a></li>
 				<li><a class="nav-link" href="about.html" title="">О нас</a></li>
-				<li>
+				<li class="folder">
 					<a class="nav-link" href="services.html" title="">Услуги</a>
 					<div class="subnav">
 						<ul>
@@ -56,7 +56,7 @@
 				</li>
 				<li><a class="nav-link" href="#" title="">Цены</a></li>
 				<li><a class="nav-link" href="#" title="">Наши работы</a></li>
-				<li>
+				<li class="folder">
 					<a class="nav-link" href="#" title="">Интересное</a>
 					<div class="subnav">
 						<ul>
@@ -69,9 +69,9 @@
 				</li>
 				<li><a class="nav-link" href="contacts.html" title="">Контакты</a></li>
 			</ul>
-			<div class="show-sm">
+			<div class="mobinfo show-sm">
 				<a class="hover-a" href="tel:74957840948">+7 (495) 784 0948</a>
-				<a class="hover-a" href="mailto:sales@shop-recovery.ru">sales@shop-recovery.ru</a>
+				<a class="hover-a" href="mailto:info@schelkovo-electric.com">info@schelkovo-electric.com</a>
 			</div>
 		</nav>
 		<button type="button" class="navbar-toggle">
@@ -326,7 +326,7 @@
 				<div class="sqicons__pic"><img src="/template/images/icons/technics.png" alt=""></div>
 				<div class="sqicons__text">
 					<h3 class="sqicons__item-title">Подключение бытовой техники</h3>
-					<p>Нашеа фирма ответственно и надежно осуществляет подключение подключение бытовой техники.</p>
+					<p>Наша фирма ответственно и надежно осуществляет подключение подключение бытовой техники.</p>
 				</div>
 			</div>
 			<div class="sqicons__item">
