--- a/app/homepage.html
+++ b/app/homepage.html
@@ -37,57 +37,57 @@
 <header class="header header-homepage">
 	<div class="container">
 		<div class="flexbox">
-		<!-- =navbar -->
-		<nav id="navbar" class="header__nav">
-			<ul class="nav nav-tabs mainnav" role="tablist">
-				<li><a class="nav-link" href="homepage.html" title="">Главная</a></li>
-				<li><a class="nav-link" href="about.html" title="">О нас</a></li>
-				<li class="folder">
-					<a class="nav-link" href="services.html" title="">Услуги</a>
-					<div class="subnav">
-						<ul>
-							<li class="active"><a href="#">Электромонтажные работы</a></li>
-							<li><a href="#">Монтаж электропроводки</a></li>
-							<li><a href="#">Разводка электрики</a></li>
-							<li><a href="#">Замена проводки</a></li>
-							<li><a href="#">Ремонт электрики</a></li>
-						</ul>
-					</div>
-				</li>
-				<li><a class="nav-link" href="#" title="">Цены</a></li>
-				<li><a class="nav-link" href="#" title="">Наши работы</a></li>
-				<li class="folder">
-					<a class="nav-link" href="#" title="">Интересное</a>
-					<div class="subnav">
-						<ul>
-							<li><a href="articles.html" title="">Статьи</a></li>
-							<li><a href="news.html" title="">Новости</a></li>
-							<li><a href="faq.html" title="">Вопрос? Ответ!</a></li>
-							<li><a href="reviews.html" title="">Отзывы о нашей работе</a></li>
-						</ul>
-					</div>
-				</li>
-				<li><a class="nav-link" href="contacts.html" title="">Контакты</a></li>
-			</ul>
-			<div class="mobinfo show-sm">
-				<a class="hover-a" href="tel:74957840948">+7 (495) 784 0948</a>
-				<a class="hover-a" href="mailto:info@schelkovo-electric.com">info@schelkovo-electric.com</a>
+			<!-- =navbar -->
+			<nav id="navbar" class="header__nav">
+				<ul class="nav nav-tabs mainnav" role="tablist">
+					<li><a class="nav-link" href="homepage.html" title="">Главная</a></li>
+					<li><a class="nav-link" href="about.html" title="">О нас</a></li>
+					<li class="folder">
+						<a class="nav-link" href="services.html" title="">Услуги</a>
+						<div class="subnav">
+							<ul>
+								<li class="active"><a href="#">Электромонтажные работы</a></li>
+								<li><a href="#">Монтаж электропроводки</a></li>
+								<li><a href="#">Разводка электрики</a></li>
+								<li><a href="#">Замена проводки</a></li>
+								<li><a href="#">Ремонт электрики</a></li>
+							</ul>
+						</div>
+					</li>
+					<li><a class="nav-link" href="#" title="">Цены</a></li>
+					<li><a class="nav-link" href="#" title="">Наши работы</a></li>
+					<li class="folder">
+						<a class="nav-link" href="#" title="">Интересное</a>
+						<div class="subnav">
+							<ul>
+								<li><a href="articles.html" title="">Статьи</a></li>
+								<li><a href="news.html" title="">Новости</a></li>
+								<li><a href="faq.html" title="">Вопрос? Ответ!</a></li>
+								<li><a href="reviews.html" title="">Отзывы о нашей работе</a></li>
+							</ul>
+						</div>
+					</li>
+					<li><a class="nav-link" href="contacts.html" title="">Контакты</a></li>
+				</ul>
+				<div class="mobinfo show-sm">
+					<a class="hover-a" href="tel:74957840948">+7 (495) 784 0948</a>
+					<a class="hover-a" href="mailto:info@schelkovo-electric.com">info@schelkovo-electric.com</a>
+				</div>
+			</nav>
+			<button type="button" class="navbar-toggle">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<button type="button" class="close-menu"><img src="/template/images/close.png" alt="Закрыть меню"></button>
+			<!-- =/navbar -->
+
+			<!-- =contacts -->
+			<div class="contacts">
+				<a href="tel:+74951471711" class="contacts__tel">+7 (495) 147-1711</a>
+				<a href="#" title="" class="contacts__ring" data-toggle="modal" data-target="#callback" role="button">Заказать звонок</a>
 			</div>
-		</nav>
-		<button type="button" class="navbar-toggle">
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		</button>
-		<button type="button" class="close-menu"><img src="/template/images/close-modal.png" alt=""></button>
-		<!-- =/navbar -->
-		
-		<!-- =contacts -->
-		<div class="contacts">
-			<a href="tel:+74951471711" class="contacts__tel">+7 (495) 147-1711</a>
-			<a href="#" title="" class="contacts__ring" data-toggle="modal" data-target="#callback" role="button">Заказать звонок</a>
-		</div>
-		<!-- =/contacts -->
+			<!-- =/contacts -->
 		</div>
 	</div>
 </header>
