--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,8 @@
 <body>
 
 <ol>
-	<li><a href="homepage.html" target="_blank">Главная</a></li>
-	<li><a href="about.html" target="_blank">О нас</a></li>
+	<li><a href="homepage.html" target="_blank">Главная +</a></li>
+	<li><a href="about.html" target="_blank">О нас +</a></li>
 	<li><a href="services.html" target="_blank">Услуги</a></li>
 	<li><a href="service.html" target="_blank">Услуга</a></li>
 	<li><a href="price.html" target="_blank">Цены</a></li>
